--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /public/build
 /public/hot
 /public/storage
+/public/css/*.css.map
 /storage/*.key
 /vendor
 .env
@@ -15,4 +16,3 @@ yarn-error.log
 /.idea
 /.vscode
 .DS_Store
-*.css.map
