--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "sass": "^1.55.0",
+        "sass": "^1.56.1",
         "vite": "^3.0.0"
     },
     "dependencies": {
@@ -19,5 +19,8 @@
         "bootstrap-icons": "^1.9.1",
         "jquery": "^3.6.1",
         "tippy.js": "^6.3.7"
+    },
+    "engines": {
+        "node": "18.x"
     }
 }
