--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "tippy.js": "^6.3.7"
     },
     "engines": {
-        "node": "18.x"
+        "node": "18.x",
+        "npm": "8.x"
     }
 }
