--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "tcg/voyager": "^1.5"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.7",
         "fakerphp/faker": "^1.20",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.0.1",
